--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,6 +73,12 @@ h1 {
   border: 0.3rem solid chocolate;
 }
 
+a {
+	font-size: 1.8rem;
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+
 @media screen and (max-width: 720px) {
 	html {
 		font-size: 50%;
